2012-10-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c: Fix a coding error, (sizeof((char *)buf) rather than
	(strlen((char *)buf)), that can cause a buffer overrun on 64-bit
	machines.  Found by valgrind.

2012-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Save axis scaling for 3D 'set view map' plots so
	that outboard drivers can continue mousing in -persist mode.

2012-10-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c src/mouse.h src/mousecmn.h:  Allow the "bind" command to
	attach a user command to mouse button 1, at least for 2D plots.

2012-10-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/xlib.trm: Reset X11_ipc when xlib terminal exits; otherwise a
	subsequent "set term x11" fails to send output to gnuplot_x11.

2012-10-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (do_string_and_free):  The "exit" command was not working
	inside a bracketed clause.  Bug #3576439

2012-10-15  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm (set_font): The libgd terminals were failing to 
	notice a change in font size sent by set_term(",newsize")
	Bugfix (old bug!)

	* term/canvas.trm (set_font); Minimal set_font routine for canvas
	terminal. All it does at this point is change or restore the font size.

	* src/term.c (term_start_multiplot): The calculation of vertical space
	required for a plot title depends on term->v_char, which in turn depends
	on the font used for the title. Bugfix.

2012-10-14  Ruediger Haertel  <haertel@users.sourceforge.net>

	* src/term.c (term_start_multiplot) docs/gnuplot.doc:
	Add enhanced/noenhanced option to "set multiplot title".

2012-10-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp (qt_set_font):  term->set_font("")
	must restore the default terminal font and size.
	Bugfix.

	* src/qtterminal/qt_term.cpp: Improved font metrics.

2012-10-13  Ethan A Merritt  <merritt@u.washington.edu>
