@@ -6,6 +6,7 @@ New features, changes and fixes since gnuplot version 4.6.1
 * FIX qt terminal font metrics
 * FIX gd terminal fontsize change requested by set_font(",newsize")
 * FIX -persist mode continued mousing of 3D "set view map" plots
+* FIX reset parsing state after error in parsing string input
 
 
 New features, changes and fixes in gnuplot version 4.6.1
